--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -76,15 +76,17 @@
 
                     <local:UniformStackPanel Spacing="5" Orientation="Horizontal" >
                         <Button Click="ShowAll"
+                                HorizontalAlignment="Stretch"
                                 ToolTipService.ToolTip="Show all types and members in this API scope (then you can do search from there)">
                             <StackPanel Orientation="Horizontal" Spacing="8">
                                 <!-- Bulleted list -->
                                 <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe8fd;"/>
-                                <TextBlock>Everything</TextBlock>
+                                <TextBlock >Everything</TextBlock>
                             </StackPanel>
                         </Button>
 
                         <Button Click="ShowNamespaces"
+                                HorizontalAlignment="Stretch"
                                 ToolTipService.ToolTip="Navigate types in a hierarchy of namespaces">
                             <StackPanel Orientation="Horizontal" Spacing="8">
                                 <!-- Relationship symbol is closest I could find to a hierarchy -->
@@ -93,7 +95,8 @@
                             </StackPanel>
                         </Button>
 
-                        <Button x:Name="_psButton" Click="GoToPSClick">
+                        <Button x:Name="_psButton" Click="GoToPSClick"
+                                HorizontalAlignment="Stretch" >
                             <ToolTipService.ToolTip>
                                 <local:ComplexToolTip
                                             Title="{x:Bind PowerShellTipText.Item1}"
@@ -104,6 +107,17 @@
                                 <!-- CommandPrompt -->
                                 <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe756;"/>
                                 <TextBlock>PowerShell</TextBlock>
+                            </StackPanel>
+                        </Button>
+
+                        <Button Click="ShowHelp" HorizontalAlignment="Stretch">
+                            <Button.KeyboardAccelerators>
+                                <KeyboardAccelerator Key="F1"/>
+                            </Button.KeyboardAccelerators>
+                            
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <SymbolIcon Symbol="Help"/>
+                                <TextBlock>Help</TextBlock>
                             </StackPanel>
                         </Button>
                     </local:UniformStackPanel>
