--- a/Tempo2/DebugLog.xaml
+++ b/Tempo2/DebugLog.xaml
@@ -10,7 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <ScrollViewer>
+    <ScrollViewer Padding="10">
         <TextBlock Text="{x:Bind Text}"
                    IsTextSelectionEnabled="True"/>
     </ScrollViewer>
