--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -130,12 +130,24 @@
                            HorizontalAlignment="Left"
                            >API Scope</TextBlock>
 
-                <StackPanel Grid.Row="2" Grid.Column="1"
-                            Spacing="20"
-                        Orientation="Vertical">
+                <Grid Grid.Row="2" Grid.Column="1"
+                      ColumnSpacing="20" RowSpacing="20">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition MaxWidth="350" Width="*"/>
+                        <ColumnDefinition MaxWidth="350" Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
 
                     <!-- bugbug: this xBind should not be this hard -->
-                    <RadioButton IsChecked="{x:Bind ((local:App)local:App.Current).IsWinPlatformScope, Mode=TwoWay}" 
+                    <RadioButton Grid.Row="0" Grid.Column="0"
+                                 IsChecked="{x:Bind ((local:App)local:App.Current).IsWinPlatformScope, Mode=TwoWay}" 
                                  VerticalAlignment="Top"
                                  GroupName="Test"
                                  AccessKey="W"
@@ -148,7 +160,8 @@
                         </StackPanel>
                     </RadioButton>
 
-                    <RadioButton IsChecked="{x:Bind ((local:App)local:App.Current).IsWinAppScope, Mode=TwoWay}" 
+                    <RadioButton Grid.Row="0" Grid.Column="1" 
+                                 IsChecked="{x:Bind ((local:App)local:App.Current).IsWinAppScope, Mode=TwoWay}" 
                                  VerticalAlignment="Top"
                                  GroupName="Test"
                                  DoubleTapped="ApiScope_RadioButton_DoubleTapped"
@@ -161,7 +174,8 @@
                         </StackPanel>
                     </RadioButton>
 
-                    <RadioButton IsChecked="{x:Bind ((local:App)local:App.Current).IsWin32Scope, Mode=TwoWay}" 
+                    <RadioButton Grid.Row="1" Grid.Column="0" 
+                                 IsChecked="{x:Bind ((local:App)local:App.Current).IsWin32Scope, Mode=TwoWay}" 
                                  VerticalAlignment="Top"
                                  GroupName="Test"
                                  DoubleTapped="ApiScope_RadioButton_DoubleTapped"
@@ -178,11 +192,47 @@
                         </StackPanel>
                     </RadioButton>
 
+                    
+                    <RadioButton Grid.Row="2" Grid.Column="0" 
+                                 IsEnabled="{x:Bind local:App.Instance.IsDotNetCoreEnabled}"
+                                 IsChecked="{x:Bind ((local:App)local:App.Current).IsDotNetScope, Mode=TwoWay}" 
+                                 VerticalAlignment="Top"
+                                 GroupName="Test"
+                                 DoubleTapped="ApiScope_RadioButton_DoubleTapped"
+                                 AccessKey="D">
+                        <StackPanel>
+                            <TextBlock x:Name="_dotNetScopeLabel"><Underline>D</Underline>otNet Runtime</TextBlock>
+                            <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
+                                The base runtime, used by all frameworks.
+                                So for example this has String and List&lt;T&gt;, but not WPF or WinForms.
+                            </TextBlock>
+                        </StackPanel>
+                    </RadioButton>
+
+                    <RadioButton Grid.Row="2" Grid.Column="1" 
+                                 IsEnabled="{x:Bind local:App.Instance.IsDotNetWindowsEnabled}"
+                                 IsChecked="{x:Bind ((local:App)local:App.Current).IsDotNetWindowsScope, Mode=TwoWay}" 
+                                 VerticalAlignment="Top"
+                                 GroupName="Test"
+                                 DoubleTapped="ApiScope_RadioButton_DoubleTapped"
+                                 AccessKey="O">
+                        <StackPanel>
+                            <TextBlock x:Name="_dotNetWindowsScopeLabel">D<Underline>o</Underline>tNet Windows</TextBlock>
+                            <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
+                                .Net Windows Desktop libraries. This includes WPF and WinForms.
+                            </TextBlock>
+                        </StackPanel>
+                    </RadioButton>
 
 
 
                     <!-- Custom API scope -->
-                    <Grid VerticalAlignment="Top">
+                    <!-- bugbug: can't figure out how to get the border to the be same as the search box -->
+                    <Grid Grid.Row="3" Grid.ColumnSpan="2" 
+                          VerticalAlignment="Top"
+                          Padding="0,7,0,0"
+                          BorderThickness="0,1,0,0" 
+                          BorderBrush="{ThemeResource SystemAccentColorLight1}">
                         <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
                                             Margin="-10"
                                             Visibility="{x:Bind IsDraggingOverCustom, Mode=OneWay}"/>
@@ -242,7 +292,7 @@
                         </RadioButton>
                     </Grid>
 
-                </StackPanel>
+                </Grid>
 
                 <!-- Baseline row -->
                 <TextBlock x:Name="_baseline"  Grid.Row="3" Grid.Column="0"
