--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -181,7 +181,7 @@
                                  DoubleTapped="ApiScope_RadioButton_DoubleTapped"
                                  AccessKey="3">
                         <StackPanel>
-                            <TextBlock x:Name="_webView2ScopeLabel">Win<Underline>3</Underline>2</TextBlock>
+                            <TextBlock x:Name="_win32ScopeLabel">Win<Underline>3</Underline>2</TextBlock>
                             <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
                                 Search the Win32 API, downloading it from nuget.org<LineBreak/>
                                 Note that this uses the <Hyperlink NavigateUri="https://github.com/microsoft/win32metadata">Win32 Metadata project</Hyperlink>,
@@ -199,7 +199,7 @@
                                  DoubleTapped="ApiScope_RadioButton_DoubleTapped"
                                  AccessKey="2">
                         <StackPanel>
-                            <TextBlock x:Name="_win32ScopeLabel">WebView<Underline>2</Underline></TextBlock>
+                            <TextBlock x:Name="_webView2ScopeLabel">WebView<Underline>2</Underline></TextBlock>
                             <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
                                 WebView2 APIs, downloaded from nuget.org
                             </TextBlock>
